fix: fix the line breaks in the names

--- a/css/style.css
+++ b/css/style.css
@@ -95,19 +95,23 @@ select:focus {
 
 .candidatos #nomeUrna {
   position: absolute;
-  margin-top: 7px;
+  margin-top: 10px;
   top: 45%;
   left: 50%;
-  font-size: 23px;
-  transform: translateX(-50%); 
+  transform: translateX(-50%);
   font-weight: 900;
-  white-space: nowrap; 
-  overflow: hidden;
-  text-overflow: ellipsis;
+  padding-left: 5%;       /* 5% de espaçamento da esquerda */
+  padding-right: 5%;      /* 5% de espaçamento da direita */
+  width: 90%;             /* Largura ajustada ao conteúdo */
+  text-align: center;
+  overflow: hidden;       /* Esconde o texto que ultrapassar os limites */
+  text-overflow: ellipsis; /* Adiciona reticências ao texto que ultrapassar */
+  font-size: 17.5px;
+  word-wrap: break-word;
 }
 
 .candidatos #numeroUrna {
-  margin-top: 10px;
+  margin-top: 17px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -117,7 +121,7 @@ select:focus {
 }
 
 .candidatos #nomeCompleto {
-  margin-top: 10px;
+  margin-top: 15px;
   position: absolute;
   white-space: nowrap; 
   overflow: hidden;
@@ -130,13 +134,17 @@ select:focus {
 }
 
 .candidatos #cidade {
-  margin-top: 10px;
+  margin-top: 14px;
   position: absolute;
   top: 65%;
   left: 50%;
   font-size: 15px;
-  transform: translateX(-50%); 
+  transform: translateX(-50%);
   font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 95%; /* Garantir que o texto não ultrapasse a caixa */
 }
 
 .candidatos #partidoSigla {
